--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "intervention/image": "^2.5",
+        "jenssegers/mongodb": "dev-develop",
         "laravel/framework": "^7.0",
         "laravel/passport": "^9.3",
         "laravel/tinker": "^2.0",
+        "mongodb/mongodb": "^1.6",
         "predis/predis": "^1.1"
     },
     "require-dev": {
