--- a/.env.example
+++ b/.env.example
@@ -9,13 +9,20 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=trello
 DB_USERNAME=root
 DB_PASSWORD=
 
+MONGO_DB_CONNECTION=mongodb
+MONGO_DB_PORT=27017
+MONGO_DB_HOST=127.0.0.1
+MONGO_DB_DATABASE=trello
+MONGO_DB_USERNAME=
+MONGO_DB_PASSWORD=
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -44,3 +51,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+IMAGE_DRIVER='intervention'
