--- a/.env.example
+++ b/.env.example
@@ -53,3 +53,5 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 IMAGE_DRIVER='intervention'
+
+PAGINATION_PER_PAGE=
